# tools4bci-unibuild

./: .gitmodules  CMakeLists.txt  README.md
extern_bundle/filterTools/include/filterTools/: iirchebylpf.h
extern_bundle/hardware_vendors/dataq/include/dataq/: err_codes.h  hdrdef32.h
extern_bundle/rapidxml/include/rapidxml/: rapidxml_print.hpp
libtia/: CMakeLists.txt  CMakeLists.txt~
sigserver/: CMakeLists.txt
sigserver/src/: CMakeLists.txt
tiascope/: CMakeLists.txt
tobicore/: CMakeLists.txt
tobicore/libtid/: CMakeLists.txt
tobicore/python/: CMakeLists.txt
tobicore/tobicore/: CMakeLists.txt
tobicore/tobiic/: CMakeLists.txt
tobicore/tobiid/: CMakeLists.txt
tobicore/tobiplatform/: CMakeLists.txt
